--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,10 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  /*padding: 50px;*/
+  font: 18px "Lucida Grande", Helvetica, Arial, sans-serif;
+}
+
+h1{
+	text-align: center;
 }
 
 a {
