--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,7 +32,7 @@
     </table>
 
 
-	<div id="page" align="center" style="margin-top:15px" </div>
+	<div id="page" align="center" style="margin-top:15px"> </div>
 
   </body>
 
