--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,8 +31,11 @@
 	    <tbody></tbody>
     </table>
 
-
-	<div id="page" align="center" style="margin-top:15px"> </div>
+    <div class="pages" id="js-page-box" style="margin-top:15px">>
+		<div class="pages-con">
+			<div id="page" </div>
+		</div>
+	</div>
 
   </body>
 
