--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,7 +31,7 @@
 	    <tbody></tbody>
     </table>
 
-    <div class="pages" id="js-page-box" style="margin-top:15px">>
+    <div class="pages" id="js-page-box" style="margin-top:15px">
 		<div class="pages-con">
 			<div id="page" </div>
 		</div>
