--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,7 @@
 body {
   /*padding: 50px;*/
   font: 18px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-color: rgb(204, 232, 207)
 }
 
 h1{
